@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0

class ListEmployeesByRoleView {
}

class ListEmployeesByRoleController {
    +getEmployeesByRole(role: string): List<Employee>
}

class Admin {
    - name
    - email
    - phoneNumber
    +getEmployeeContainer(): EmployeeContainer
}

class EmployeeContainer {
    +getEmployeesByRole(role: string): List<Employee>
}

class Employee {
    -employee_id
        -name
        -postalAddress
        -phoneNumber
        -email
        -citizenCardNumber
        -role
    Employee(name, postal_address, phone_number, email, role)
    +getName(): string
    +getPostalAddress(): string
    +getPhoneNumber(): string
    +getEmail(): string
    +getRole(): string
}

' Associations
Admin "1" -right-> "1" EmployeeContainer : maintains
EmployeeContainer "1" -right-> "0..*" Employee : stores

ListEmployeesByRoleView ..> ListEmployeesByRoleController
ListEmployeesByRoleView ..> Employee
ListEmployeesByRoleController ..> Admin
ListEmployeesByRoleController ..> EmployeeContainer

@enduml
